<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_editor_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/add_title_text_view"
            style="@style/TitleStyle"
            android:paddingRight="@dimen/editor_title_text_view_padding"
            android:text="@string/add_title_text_view" />

        <EditText
            android:id="@+id/add_title_edit_text"
            style="@style/AdditionalInfoStyle"
            android:layout_width="match_parent"
            android:hint="@string/add_title_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/add_quantity_text_view"
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/add_quantity_text_view"
            android:ellipsize="end"
            />

        <EditText
            android:id="@+id/add_quantity_edit_text"
            style="@style/TitleStyle"
            android:textColor="@color/colorAccent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:inputType="number"
            android:gravity="right"
            tools:text="21"/>

        <TextView
            android:id="@+id/add_price_text_view"
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/add_price_text_view" />

        <EditText
            android:id="@+id/add_price_edit_text"
            style="@style/TitleStyle"
            android:textColor="@color/colorAccent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:inputType="number"
            android:gravity="right"
            tools:text="21"
            />
        <TextView
            android:id="@+id/add_currency"
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/dollar_sign" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_supplier_email_text_view"
            style="@style/TitleStyle"
            android:paddingRight="@dimen/editor_title_text_view_padding"
            android:text="@string/supplier_email" />

        <EditText
            android:id="@+id/add_supplier_email_edit_text"
            style="@style/AdditionalInfoStyle"
            android:layout_width="match_parent"
            android:hint="@string/add_title_hint"
            android:inputType="textEmailAddress"
            />

    </LinearLayout>
    <Button
        android:id="@+id/galleryButton"
        android:layout_height="wrap_content"
        android:text="@string/open_from_gallery"
        style="@style/ButtonStyle"
        />
    <ImageView
        android:id="@+id/photoImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@color/colorBackground"/>


</LinearLayout>