<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/details_title"
            style="@style/TitleStyle"
            android:layout_width="0dp"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/details_price"
            style="@style/TitleStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="end|center"
            tools:text="5"
            android:paddingRight="@dimen/activity_margin"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/details_currency"
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/dollar_sign" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/details_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:layout_margin="@dimen/activity_margin"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/details_order_button"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/activity_margin">

            <Button
                android:id="@+id/details_quantity_minus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quantity_minus"
                android:background="@color/colorAccent"
                android:textColor="@color/colorBackground"

                />

            <TextView
                android:id="@+id/details_quantity"
                style="@style/TitleStyle"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/details_quantity_plus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quantity_plus"
                android:background="@color/colorAccent"
                android:textColor="@color/colorBackground"
                />
        </LinearLayout>

        <Button
            android:id="@+id/details_order_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/order_from_supplier"
            android:background="@color/colorAccent"
            android:textColor="@color/colorBackground"/>
    </LinearLayout>

</LinearLayout>
